fix overflow

--- a/shopping-list/src/App.css
+++ b/shopping-list/src/App.css
@@ -19,6 +19,7 @@ body * {
   align-items: stretch;
   justify-content: flex-start;
   flex-direction: row;
+  flex: 0;
   width: 100%;
 }
 
@@ -39,7 +40,8 @@ body * {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   border-top: 1px solid #282828;
-  border-bottom: 2px solid #282828;
+  overflow: auto;
+  flex: 1;
 }
 
 .reset-btn {
@@ -71,4 +73,20 @@ body * {
 .App__body-row p {
   width: calc(100% - 88px);
   text-indent: 0.25rem;
+}
+
+.App__bottom-nav {
+  flex: 0;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-top: 2px solid #282828;
+}
+
+.App__bottom-nav button {
+  font-size: 1.5rem;
+  margin-top: 0.5rem;
 }
